--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         LNCS guidelines</a>.
                     <br>
                     Submissions may not exceed 12 pages in PDF format for full papers, respectively 6 pages for
-                    short or demo papers (which will be presented as posters), including figures and references.
+                    short or demo papers, including figures and references.
                     Submitted papers must be original work that has not appeared in and is not under consideration for
                     another conference or journal. Work in progress is welcome, but preliminary results should be made
                     available as a proof of concept. Submissions only consisting of a proposal will be rejected.
@@ -247,10 +247,13 @@
                         Bioinformatics</b></a>
                     journal (2-year IF 2.511, SJR 1.374).
                     We are working towards an agreement with the same journal also for this year.-->
+                    Accepted papers will be published by Springer as joint proceedings of several ECML PKDD workshops.
+                    
+                    
                     We are working towards a preliminary agreement with <a
                         href="https://bmcbioinformatics.biomedcentral.com/" target="_blank"><b>BMC
                     Bioinformatics</b></a> journal (2-year Impact Factor: 3.169)
-                    for a <b>post-conference supplement</b> related to Conceptual Modeling in Life Sciences.
+                    for a <b>post-conference supplement</b> related to Data modeling, Processing and Analysis for Life Sciences.
                     If the agreement is reached, all the papers accepted to our workshop will be invited
                     to submit a revised and extended version to the journal supplement.
                 </p>
