--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <br><br>
         <h3>19-23 Septmber, 2022 in Grenoble, France</h3>
-        <h4 style="color:red;pacity: 0.7;">Hybrid workshop</h4>
+        <h4 style="color:red;pacity: 0.7;">Online workshop</h4>
         <!--<h3 style="color:red">Held virtually</h3>-->
 
         <br>
