--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                     <a href="http://www.springer.com/gp/computer-science/lncs/conference-proceedings-guidelines">Springer
                         LNCS guidelines</a>.
                     <br>
+                    Authors can submit their manuscript using the <a href="https://easychair.org/conferences/?conf=dals2022">EasyChair platforms.</a>.<br/>
                     Submissions may not exceed 12 pages in PDF format for full papers, respectively 6 pages for
                     short or demo papers, including figures and references.
                     Submitted papers must be original work that has not appeared in and is not under consideration for
