--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 </p>
                 <p class="text-justify">
                     Gaia Ceddia is a Recognised Researcher at Barcelona Supercomputing Center. She is currently working
-                    for the Integrative Computational Network Biology group directed by Prof. Nata\v{s}a Pr\v{z}ulj. She
+                    for the Integrative Computational Network Biology group directed by Prof. Nataša Pržulj. She
                     received his PhD cum laude in 2021, with a thesis titled “Computational Methods for Data-driven
                     Predictions and Understanding of Biological Interactions” at Politecnico di Milano. Her research
                     interests include the design of novel network science and machine learning algorithms to extract new
