dates were updated

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <br><br>
         <h3>19-23 September, 2022 in Grenoble, France</h3>
-        <h4 style="color:red;pacity: 0.7;">Online workshop</h4>
+        <h4 style="color:red;opacity: 0.7;">Online workshop</h4>
         <!--<h3 style="color:red">Held virtually</h3>-->
 
         <br>
@@ -277,10 +277,13 @@
                 <p class="lead">
                 The following deadlines are in AoE time zone (UTC – 12).
                 <ul class="lead">
-                    <li>Paper submission: 20 June 2022</li>
-                    <li>Notification: 13 July 2022</li>
-                    <li>ECML PKDD Conference dates: September 17-20, 2022
+                    <li>Paper submission: 31 August 2022
+                        <span style="color:red;opacity: 0.7;text-decoration: line-through;">20 June 2022</span>
                     </li>
+                    <li>Notification: 10 September 2022
+                        <span style="color:red;opacity: 0.7;text-decoration: line-through;">13 July 2022</span>
+                    </li>
+                    <li>ECML PKDD Conference dates: September 17-20, 2022</li>
                 </ul>
                 </p>
             </div>
