corrected Arif's bio

--- a/index.html
+++ b/index.html
@@ -322,12 +322,12 @@
                 </p>
                 <p class="text-justify">
                     Arif Canakoglu currently works as a data scientist at Policlinico di Milano; and he works mainly on
-                    the electronic health record of the intensive care ut's patients in the Lombardy region. He is
+                    the electronic health record of the intensive care unit's patients in the Lombardy region. He is
                     leading the research with the support of the medical group, analyzing the life quality of the
-                    patients after the hospital discharge. Previously, he was involved in the “Data-driven Genomic
-                    Computing” ERC Awarded project (2016-2021), where he contributed for developing integration of
+                    patients after the hospital discharge. Previously, he was involved in the "Data-driven Genomic
+                    Computing" ERC Awarded project (2016-2021), where he contributed to developing integration of
                     heterogeneous genomic data and for developing computational methods for genomic applications. In
-                    2016, He received his PhD on biomolecular knowledge data integration by using the modular schema
+                    2016, he received his PhD on biomolecular knowledge data integration by using the modular schema
                     data warehouse. His research interests include data integration and data driven genomic computing,
                     big data analysis and processing on cloud computing, artificial intelligence applications. His main
                     areas of expertise are heterogeneous data integration and data driven models and machine learning
