--- a/index.html
+++ b/index.html
@@ -148,6 +148,37 @@
     </div>
 </section>
 
+<section id="program">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8 mx-auto">
+                <h2>Program</h2>
+                <p class="text-justify">DALS 2022 will take place Monday, September the 19th starting at 9:00AM (CET). The program of the workshop follows:</p>
+                <div class="col-lg-8 mx-auto">
+                <p class="lead">
+                    <b>9:00-9:15</b>, Welcome and Introduction
+                </p>
+                <p class="lead">
+                    <b>9:15-10:15</b>, Keynote by Anna Bernasconi: Data analysis for unveiling the SARS-CoV-2 evolution<br>
+                    
+                    <b>Abstract: </b> The COVID-19 epidemic has brought enormous attention to the genetics of viral infection and the corresponding disease. In this seminar, I will provide a viral genomic primer. Then, I will discuss the potential of big data in this domain, especially when millions of SARS-CoV-2 sequences are available on open databases.
+                    I will present a collection of current analysis problems, focusing on viral evolution, monitoring of variants, and the categorization of their effects. Finally, I will hint at open problems that should attract the interest of data scientists.<br>
+                    <b>Biography: </b> Anna Bernasconi is a postdoctoral researcher with the Dipartimento di Elettronica, Informazione e Bioingegneria at Politecnico di Milano and a visiting researcher at Universitat Politècnica de València. Her research areas are Bioinformatics, Databases, and Data Science, where she applies conceptual modeling, data integration, and semantic web technologies to biological and genomic data. Starting from a Ph.D. thesis on the modeling and integration of data and metadata of human genomic datasets, she has then extended her expertise to the fastly growing field of viral genomics, particularly relevant since the COVID-19 pandemic outbreak. She is active in the conceptual modeling and database communities, with several paper presentations and the organization of tutorials and workshops.
+
+                </p>
+                <p class="lead">
+                    <b>10:15-10:45</b>, Paper presentation: I-CONVEX: Fast and Accurate de Novo Transcriptome Recovery from Long Reads. 
+                </p>
+                <p class="lead">
+                    <b>10:45-11:15</b>, Paper presentation: Italian debate on measles vaccination: how Twitter data highlight communities and polarity. 
+                </p>
+
+            </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <!--<section id="accepted">
     <div class="container-fluid">
         <div class="row">
@@ -418,7 +449,6 @@
                         <li>Sudha Ram, University of Arizona</li>
                         <li>Maria Rodriguez Martinez, IBM Zurich Research Laboratory</li>
                          <li>Pietro Pinoli, Politecnico di Milano</li>
-
                     </ul>-->
                 </p>
             </div>
@@ -455,7 +485,6 @@
                     where the challenge of collecting provenance metadata and extracting value from it through
                     analytics techniques is central to the research.
                     <br>
-
                     His talk will be focused on &mdash; but not limited to &mdash; the results of ReComp project and
                     explain
                     its application to Genomics and to the Simple Variant Interpretation (SVI) workflow.
@@ -481,7 +510,6 @@
                     <br>Roman Lukyanenko, Veda Storey and Oscar Pastor Lopez:
                     <br>The Notion of “System” as a Core Conceptual Modeling Construct for Life Sciences.
                     <a target="_blank" class="pdf" href="presentations/1-TristaoEtAl.pdf">Slides</a>
-
                     <a target="_blank" class="video" href="https://youtu.be/Y74YXHj8-mE">Video</a>
                     <br>
                     </p>
@@ -519,11 +547,8 @@
                     This is the list of accepted papers for CMLS 2021:</p>
                 <ul class="lead">
                     <li>Roman Lukyanenko, Veda Storey and Oscar Pastor Lopez. <i>The Notion of “System” as a Core Conceptual Modeling Construct for Life Sciences</i></li>
-
                     <li>Alberto García S., Mireia Costa Sánchez and Oscar Pastor Lopez. <i>Characterization and Treatment of the Temporal Dimension of Genomic Variations: a Conceptual Model-based approach</i></li>
-
                     <li>Federico Comolli. <i>Extension of the Genomic Conceptual Model to integrate Genome-Wide Association Studies</i></li>
-
                     <li>Sara Balderas-Díaz, Rodríguez Fórtiz María José, Gabriel Guerrero-Contreras, Mercedes Bellido-González and Jose Luis Garrido. <i>Design of an Adaptable mHealth System Supporting a Psycho-Educational Program for Pregnant Women with SGA Foetuses</i></li>
                 </ul>
             </div>
