--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
 </section>
 -->
 
-<section id="program">
+<!-- <section id="program">
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-8 mx-auto">
@@ -531,12 +531,12 @@
                     <br>18.35-19.00
                     <br>Oscar Pastor (<b>Keynote talk</b>):
                     <br>New directions for clinical and genomic problems in different diseases: A Conceptual Modeling-based
-                    Approach-->
+                    Approach
                 </p>
             </div>
         </div>
     </div>
-</section>
+</section> -->
 
 <!--<section id="accepted">
     <div class="container-fluid">
